--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Anti Ads Global",
+  "name": "Block ADS Global",
   "description": "Remove anúncios, banners, trackers e tenta silenciar/pular ads em qualquer site",
-  "version": "1.0",
+  "version": "2.0",
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
